2006-09-22  Mickael Remond  <mickael.remond@process-one.net>

	* src/msgs/fr.msg: updated French translation.
	
	* doc/guide.tex: Large improvements for ejabberd 1.1.2 (thanks to
	Sander Devrieze)
	* doc/version.tex: Likewise.
	* doc/features.tex: Likewise.
	* doc/Makefile: Likewise.
	* doc/dev.tex: Likewise.
	
2006-09-14  Mickael Remond  <mickael.remond@process-one.net>

	* doc/guide.tex: Minor fix on index generation.

2006-09-14  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Updated (thanks to Evgeniy Khramtsov)

	* src/ejabberd_auth_ldap.erl: Better LDAP support (thanks to
	Evgeniy Khramtsov)
	* src/mod_vcard_ldap.erl: Likewise
	* src/eldap/eldap_filter.erl: Likewise

2006-09-11  Mickael Remond  <mickael.remond@process-one.net>

	* src/odbc/mssql.sql: Removed unused fields.

2006-09-10  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejd2odbc.erl: Updated

	* src/mod_muc/mod_muc_log.erl: Fixed html special characters
	escaping, added new image buttons, chatroom titles now point to
	xmpp: URIs (thanks to Badlop)

2006-09-05  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_muc/mod_muc.erl: It is now possible to configure the MUC room
	history feature. A new option has been added in ejabberd muc module
	configuration (history_size) to define the size of the history. 0 is
        used to disable the feature.
	* src/mod_muc/mod_muc_room.erl: Likewise.
	* doc/guide.tex: Likewise.

2006-09-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_shared_roster.erl: Bugfix

	* src/mod_roster_odbc.erl: Bugfix

2006-09-03  Mickael Remond  <mickael.remond@process-one.net>

	* src/odbc/odbc_queries.erl: Support for Microsoft SQL Server as a
	database backend (via ODBC).
	* src/odbc/ejabberd_odbc.erl: Likewise.
	* src/odbc/mssql.sql: Likewise.
	* src/odbc/Makefile.in: Likewise.
	* src/ejabberd_auth_odbc.erl: Likewise.
	* src/mod_offline_odbc.erl: Likewise.
	* src/mod_roster_odbc.erl: Likewise.
	* src/mod_last_odbc.erl: Likewise.
	* src/configure.ac: Likewise